; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-versatile/extr_core.c_versatile_clcd_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-versatile/extr_core.c_versatile_clcd_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clcd_fb = type { %struct.TYPE_6__, %struct.TYPE_4__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clcd_fb*)* @versatile_clcd_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @versatile_clcd_remove(%struct.clcd_fb* %0) #0 {
  %2 = alloca %struct.clcd_fb*, align 8
  store %struct.clcd_fb* %0, %struct.clcd_fb** %2, align 8
  %3 = load %struct.clcd_fb*, %struct.clcd_fb** %2, align 8
  %4 = getelementptr inbounds %struct.clcd_fb, %struct.clcd_fb* %3, i32 0, i32 1
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load %struct.clcd_fb*, %struct.clcd_fb** %2, align 8
  %8 = getelementptr inbounds %struct.clcd_fb, %struct.clcd_fb* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.clcd_fb*, %struct.clcd_fb** %2, align 8
  %13 = getelementptr inbounds %struct.clcd_fb, %struct.clcd_fb* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.clcd_fb*, %struct.clcd_fb** %2, align 8
  %17 = getelementptr inbounds %struct.clcd_fb, %struct.clcd_fb* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @dma_free_writecombine(i32* %6, i32 %11, i32 %15, i32 %20)
  ret void
}

declare dso_local i32 @dma_free_writecombine(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
